@@ -91,34 +91,33 @@ use constant NIDSET_IDS => 1;
 package Marpa::R3::Internal::Scanless::G;
 use constant L => 0;
 use constant REGIX => 1;
-use constant CHARACTER_CLASS_TABLE => 2;
-use constant DISCARD_EVENT_BY_LEXER_RULE => 3;
-use constant COMPLETION_EVENT_BY_ID => 4;
-use constant NULLED_EVENT_BY_ID => 5;
-use constant PREDICTION_EVENT_BY_ID => 6;
-use constant LEXEME_EVENT_BY_ID => 7;
-use constant SYMBOL_IDS_BY_EVENT_NAME_AND_TYPE => 8;
-use constant BLESS_PACKAGE => 9;
-use constant IF_INACCESSIBLE => 10;
-use constant WARNINGS => 11;
-use constant TRACE_FILE_HANDLE => 12;
-use constant CHARACTER_CLASSES => 13;
-use constant EXHAUSTION_ACTION => 14;
-use constant REJECTION_ACTION => 15;
-use constant SEMANTICS_PACKAGE => 16;
-use constant TRACE_ACTIONS => 17;
-use constant NULL_VALUES => 18;
-use constant CLOSURE_BY_SYMBOL_ID => 19;
-use constant CLOSURE_BY_RULE_ID => 20;
-use constant CONSTANTS => 21;
+use constant TRACE_FILE_HANDLE => 2;
+use constant CONSTANTS => 3;
+use constant CHARACTER_CLASS_TABLE => 4;
+use constant DISCARD_EVENT_BY_LEXER_RULE => 5;
+use constant COMPLETION_EVENT_BY_ID => 6;
+use constant NULLED_EVENT_BY_ID => 7;
+use constant PREDICTION_EVENT_BY_ID => 8;
+use constant LEXEME_EVENT_BY_ID => 9;
+use constant SYMBOL_IDS_BY_EVENT_NAME_AND_TYPE => 10;
+use constant BLESS_PACKAGE => 11;
+use constant IF_INACCESSIBLE => 12;
+use constant WARNINGS => 13;
+use constant CHARACTER_CLASSES => 14;
+use constant EXHAUSTION_ACTION => 15;
+use constant REJECTION_ACTION => 16;
+use constant SEMANTICS_PACKAGE => 17;
+use constant TRACE_ACTIONS => 18;
+use constant NULL_VALUES => 19;
+use constant CLOSURE_BY_SYMBOL_ID => 20;
+use constant CLOSURE_BY_RULE_ID => 21;
 
 package Marpa::R3::Internal::Scanless::R;
 use constant SLG => 0;
 use constant L => 1;
 use constant REGIX => 2;
-use constant P_INPUT_STRING => 3;
-use constant TRACE_FILE_HANDLE => 4;
-use constant TRACE_VALUES => 5;
-use constant EVENTS => 6;
+use constant TRACE_FILE_HANDLE => 3;
+use constant TRACE_VALUES => 4;
+use constant EVENTS => 5;
 
 1;
